# ChangeLog for sys-cluster/neutron
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-cluster/neutron/ChangeLog,v 1.40 2014/08/21 20:44:22 prometheanfire Exp $

*neutron-2014.1.2 (21 Aug 2014)

  21 Aug 2014; Matthew Thode <prometheanfire@gentoo.org>
  +neutron-2014.1.2.ebuild, -files/neutron-2014.1.1-CVE-2014-3555.patch,
  -neutron-2014.1.1.ebuild:
  bup

  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> neutron-2014.1.1.ebuild,
  neutron-2014.1.9999.ebuild, neutron-9999.ebuild:
  QA: drop trailing '.' from DESCRIPTION

  01 Aug 2014; Matthew Thode <prometheanfire@gentoo.org> neutron-9999.ebuild:
  updating git master neutron

  26 Jul 2014; Matthew Thode <prometheanfire@gentoo.org>
  neutron-2014.1.1.ebuild, neutron-2014.1.9999.ebuild, neutron-9999.ebuild:
  updating broken neutron deps

  17 Jul 2014; Matthew Thode <prometheanfire@gentoo.org>
  +files/neutron-2014.1.1-CVE-2014-3555.patch, neutron-2014.1.1.ebuild:
  fix for CVE-2014-3555

  13 Jul 2014; Ian Delaney <idella4@gentoo.org> neutron-2014.1.1.ebuild,
  neutron-2014.1.9999.ebuild, neutron-9999.ebuild:
  correction to dep sqlalchemy, white space

  06 Jul 2014; Michał Górny <mgorny@gentoo.org> neutron-2014.1.1.ebuild,
  neutron-2014.1.9999.ebuild, neutron-9999.ebuild:
  Clean up obsolete dependencies on virtual/python-argparse and virtual/python-
  unittest2 (those packages were only required for <=python-2.6).

*neutron-2014.1.1 (16 Jun 2014)

  16 Jun 2014; Matthew Thode <prometheanfire@gentoo.org>
  +neutron-2014.1.1.ebuild, -files/2014.1-CVE-2014-0187.patch,
  -neutron-2014.1-r2.ebuild:
  2014.1.1 bup

  15 Jun 2014; Matthew Thode <prometheanfire@gentoo.org>
  -files/2013.2.2-CVE-2014-0056.patch, -files/2013.2.3-CVE-2014-0187.patch,
  -neutron-2013.2.3-r1.ebuild, -neutron-2013.2.9999.ebuild:
  removing the old badness

*neutron-2014.1-r2 (14 May 2014)
*neutron-2013.2.3-r1 (14 May 2014)
